deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cyberwatch
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: cyberwatch
    app.kubernetes.io/component: server
  ports:
    - name: http
      port: 8080
      targetPort: http
